codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_collapse_queue_hint_only.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 4864
expression: terminal.backend()
---
"Test                "
"                    "
"                    "
"                    "
"                    "
"                    "
"                    "
"                    "
"  tab to queue messa"
